--- a/TippyCalculator/Base.lproj/Main.storyboard
+++ b/TippyCalculator/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Tip Calculator-->
+        <!--Tipsy Calculator-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TippyCalculator" customModuleProvider="target" sceneMemberID="viewController">
@@ -28,8 +28,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Bill" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MAJ-0f-Iuv">
-                                <rect key="frame" x="16" y="85" width="77" height="28"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Bill - lolol" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MAJ-0f-Iuv">
+                                <rect key="frame" x="16" y="85" width="82" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -104,7 +104,7 @@
                             <outletCollection property="gestureRecognizers" destination="3R5-Qp-1Zs" appends="YES" id="ZYD-p4-kOf"/>
                         </connections>
                     </view>
-                    <navigationItem key="navigationItem" title="Tip Calculator" id="Pk4-kZ-MKL"/>
+                    <navigationItem key="navigationItem" title="Tipsy Calculator" id="Pk4-kZ-MKL"/>
                     <connections>
                         <outlet property="billField" destination="Ziv-0Q-y3y" id="D8D-j2-BaX"/>
                         <outlet property="tipControl" destination="IdS-Qi-Guz" id="kaG-sf-4YV"/>
